--- a/main.html
+++ b/main.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <style>
+        #btn {
+            background-color: black;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+        }
+
+        #btn:hover {
+            background-color: yellow;
+            color: black;
+            border-radius: 30px;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <button id="btn">Submit</button>
+	<script type="text/javascript" src="./script.js">
 </script>
-
 </body>
-
 </html>
