--- a/main.html
+++ b/main.html
@@ -3,10 +3,10 @@
 <head>
     <style>
         #btn {
-            background-color: black;
-            color: white;
-            border: none;
+            background-color: rgb(0, 0, 0);
+            color: rgb(255, 255, 255);
             border-radius: 5px;
+			border: 0px none rgb(255, 255, 255);
             padding: 10px 20px;
         }
 
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <button id="btn">Submit</button>
+    <button type="submit" id="btn">Submit</button>
 	<script type="text/javascript" src="./script.js">
 </script>
 </body>
